--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "private": true,
   "dependencies": {
     "@popperjs/core": "^2.11.5",
+    "@prettier/plugin-ruby": "^1.5.2",
     "@rails/actioncable": "^6.0.0",
-    "@rails/actiontext": "^6.1.5-1",
+    "@rails/actiontext": "^6.1.6",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.1.5",
     "@rails/webpacker": "5.4.3",
@@ -12,8 +13,7 @@
     "trix": "^1.2.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "@prettier/plugin-ruby": "^1.5.2"
+    "webpack-cli": "^3.3.12"
   },
   "version": "0.1.0",
   "devDependencies": {
