--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.1.5",
     "@rails/webpacker": "5.4.3",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "trix": "^1.2.0",
