--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@rails/webpacker": "5.4.3",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
-    "jquery": "^3.6.0",
+    "jquery": "3.4.1",
     "trix": "^1.2.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
